added a thread safe user login context with LoginContext class
calling a thread of it in LoginAndAccess.